Fix accordion on mobile

--- a/super-app/src/App.css
+++ b/super-app/src/App.css
@@ -50,11 +50,19 @@
   color: #0A1128;
 }
 
+.bold-700 {
+  font-weight: 700;
+}
+
 /* Tablas */
 
 .table {
   margin: 2rem 0.25rem;
   border-radius: 10px;
+}
+
+.table-historical .table-content {
+  border-radius: 0 0 .25rem .25rem;
 }
 
 .table-row.header {
@@ -150,7 +158,6 @@
   background-color: white;
   display: none;
   overflow: hidden;
-  padding: 1em;
   transition: max-height 0.3s ease;
 }
 
